Add another cat picture and names to each cat

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   </head>
   <body>
     <div class="container">
+      <div class="name-container">
+        <p class="name"></p>
+        <p class="name"></p>
+      </div>
       <div class="pic-container">
-        <img
-          class="picture"
-          src="cat-photo.jpg"
-          alt="cat running through grass"
-        />
+        <img class="picture" src="assets/cat-pic1.jpg" alt="cat sitting" />
+
+        <img class="picture" src="assets/cat-pic2.jpg" alt="cat sleeping" />
       </div>
       <div class="clicks-container">
         <p>Clicks: <span class="clicks">0</span></p>
